# SPEN-Symbiotic-Plasmid-Exchange-Network

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: algorithm.md
examples/: basic_usage.py
spen/: __init__.py  conjugation.py  crispr.py  ecosystem.py  host.py  mycorrhiza.py  plasmid.py  quorum.py
tests/: test_core.py
