[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spen"
version = "0.4.0"
description = "Symbiotic Plasmid Exchange Network: a bio-inspired deep learning paradigm"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SPEN Contributors"}
]
keywords = [
    "deep-learning",
    "bio-inspired",
    "plasmid-exchange",
    "quorum-sensing",
    "neural-architecture",
    "multi-agent",
    "transfer-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/spen"
Repository = "https://github.com/YOUR_USERNAME/spen.git"
Issues = "https://github.com/YOUR_USERNAME/spen/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["spen*"]
